# r-auth

./: .env.template  Cargo.toml  LICENSE
.cargo/: config.toml
src/: lib.rs  main.rs  swagger.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: connection.rs
src/database/models/: claims.rs  mod.rs
src/database/models/dto/: login.rs  mod.rs  user_dto.rs
src/database/models/entities/: user.rs
src/database/sql/: init.sql
src/handlers/: mod.rs  users_handler.rs
src/services/: mod.rs  users_service.rs
src/utils/: db_utils.rs  errors.rs  mod.rs
tests/: mod.rs
tests/common/: mod.rs
tests/users_service/: change_password.rs  create.rs  fetch.rs  find.rs  find_by_email.rs  find_by_id.rs  inactive_and_delete.rs  login.rs  mod.rs  update.rs
