[package]
name = "r-auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.22.0", features = ["full"]}
serde = {version = "1.0.149", features = ["derive"]}
tokio-postgres={ version = "0.7.13", features = ["with-chrono-0_4"]}
dotenv="0.15.0"
deadpool-postgres="0.14.1"
thiserror="2.0.12"
rust-argon2="2.1"
colored="3.0.0"
once_cell="1.21.3"
validator= {version = "0.20.0", features = ["derive"]}
regex = "1"
fancy-regex="0.14.0"
bitflags="2.9.1"
rustls="0.23.28"
webpki-roots="1.0.0"
tokio-postgres-rustls="0.13.0"
chrono = {version = "0.4", features = ["serde"]}
jsonwebtoken="9"
tower-http = {version = "0.6.6", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.9.1"
utoipa = {version = "5.4.0", features = ["chrono"]}
utoipa-swagger-ui = {version = "9", features = ["axum"]}
utoipa-axum = "0.2.0"
rustls-pemfile = "2.2.0"